--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -19,4 +19,5 @@ body {
     100vh - var(--main-header-height) - var(--main-subHeader-height) -
       var(--main-footer-height) - 14px
   );
+  width: 100%;
 }
